# rust_exercises

./: Cargo.toml  README.md
examples/: async_single_thread.rs  binary_heap.rs  binary_search.rs  calculator.rs  deref_mut.rs  hamming_distance.rs  iterator-api-v1.rs  iterator-api-v2.rs  iterator-api-v3.rs  iterator-api-v4.rs  iterator-api-v5.rs  k_nearest_point.rs  largest_series_product.rs  matching_brackets.rs  visit_dir_fn.rs
