[package]
name = "rust-exercises"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.tokio]
version = '1'
features = [
    # Async file system access
    # 'fs',

    # 'io-util', # enable tokio_util::io https://docs.rs/tokio-util/latest/tokio_util/io/index.html
    # 'io-std',  # enable tokio::io
    # 'macros',  # Tokio macros
    # 'net',     # TCP/UDP/Unix bindings

    # Enable crate (https://docs.rs/parking_lot).
    # Faster and smaller implementations of Mutex, RwLock, Condvar and Once
    # 'parking_lot',


    # spawn child processes
    # 'process',

    # single tread scheduler
    'rt',

    # multi tread scheduler
    # 'rt-multi-thread',

    # handle system signals
    # 'signal',

    # Enable tokio::sync
    # Synchronization primitives for use in asynchronous contexts.
    # 
    # https://docs.rs/tokio/latest/tokio/sync/index.html
    # 'sync',

    # 'time', # enable tokio::time

    # Enable tracing: https://github.com/tokio-rs/tracing
    # 'tracing',

    # 'mio', # low-level I/O features
]